Finishing touches in CSS and Markup

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Patua+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&family=Patua+One&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -57,7 +57,11 @@
       <section>
         <article id="currentWeather">
           <h2>Raleigh</h2>
-          <p>Temp: 76.62F</p>
+          <img
+            src="https://openweathermap.org/img/wn/10d@2x.png"
+            alt="weather icon"
+          />
+          <p><span>76.62</span>F</p>
           <p>Wind: 8.43 MPH</p>
           <p>Humidity: 44%</p>
         </article>
@@ -66,32 +70,52 @@
           <h3>5-Day Forecast:</h3>
           <div class="article-wrapper">
             <article>
-              <h4>Monday</h4>
-              <p>Temp: 76.62F</p>
+              <h3>04/31/2023</h3>
+              <img
+                src="https://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather icon"
+              />
+              <p><span>76.62</span>F</p>
               <p>Wind: 8.43 MPH</p>
               <p>Humidity: 44%</p>
             </article>
             <article>
-              <h4>Monday</h4>
-              <p>Temp: 76.62F</p>
+              <h3>04/31/2023</h3>
+              <img
+                src="https://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather icon"
+              />
+              <p><span>76.62</span>F</p>
               <p>Wind: 8.43 MPH</p>
               <p>Humidity: 44%</p>
             </article>
             <article>
-              <h4>Monday</h4>
-              <p>Temp: 76.62F</p>
+              <h3>04/31/2023</h3>
+              <img
+                src="https://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather icon"
+              />
+              <p><span>76.62</span>F</p>
               <p>Wind: 8.43 MPH</p>
               <p>Humidity: 44%</p>
             </article>
             <article>
-              <h4>Monday</h4>
-              <p>Temp: 76.62F</p>
+              <h3>04/31/2023</h3>
+              <img
+                src="https://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather icon"
+              />
+              <p><span>76.62</span>F</p>
               <p>Wind: 8.43 MPH</p>
               <p>Humidity: 44%</p>
             </article>
             <article>
-              <h4>Monday</h4>
-              <p>Temp: 76.62F</p>
+              <h3>04/31/2023</h3>
+              <img
+                src="https://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather icon"
+              />
+              <p><span>76.62</span>F</p>
               <p>Wind: 8.43 MPH</p>
               <p>Humidity: 44%</p>
             </article>
