Refactored JS again and added comments

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
+    <meta type="description" content="A weather dashboard that runs in the browser and features dynamically updated HTML and CSS." />
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <!-- 
@@ -48,6 +49,7 @@
           </div>
         </form>
         <div id="previousCities">
+          <!-- Buttons will be added here -->
           <div id="previousCitiesBtns"></div>
           <button id="deleteHistory" class="link">
             Delete history <i class="fas fa-trash"></i>
@@ -60,6 +62,7 @@
 
         <article id="fiveDayForecast">
           <h3>5-Day Forecast:</h3>
+          <!-- The 5 days forecast cards will be added here -->
           <div class="article-wrapper"></div>
         </article>
       </section>
